Bug 426026 - Changes to annotation tool first correctly applied after re-selecting tool
Summary: Changes to annotation tool first correctly applied after re-selecting tool
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.11.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-31 17:47 UTC by postix
Modified: 2021-05-10 07:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08
Sentry Crash Report:


Attachments
Screenrecording (3.30 MB, video/mp4)
2020-09-02 08:47 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2020-08-31 17:47:16 UTC
STEPS TO REPRODUCE
1. Select a tool, e.g. rectangular outline
2. Use it
3. Change the tool's line width in its properties dialog, click on okay
4. Use it again

OBSERVED RESULT
The line width hasn't changed. In order for the change to take effect, the tool has to be reselected.


EXPECTED RESULT
The the tool uses the new set line width.


SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.0
Comment 1 Simone Gaiarin 2020-09-02 07:55:08 UTC
I cannot reproduce this.

I tried to select the tool from both the annotation toolbar and from the quick annotation tool menu. I than clicked the 'Advanced settings for the current annotation tool' action in the annotation toolbar, do you also access the property dialog using this action?
Comment 2 postix 2020-09-02 08:47:30 UTC
Created attachment 131355 [details]
Screenrecording

Here's a screen recording which demonstrates each steps. :)
Comment 3 Bug Janitor Service 2020-10-28 07:06:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/okular/-/merge_requests/305
Comment 4 Simone Gaiarin 2020-10-28 07:19:57 UTC
The proposed merge request "solves" this problem by deselecting the tool when it is modified, so that it has to be reselected.

Given that the settings of the quick annotation tools are supposed to be modified occassionaly (as opposed to the builtin annotation tools on the toolbar) I consider having to reselect the tool once in a while a minor problem.
Comment 5 Simone Gaiarin 2021-05-10 07:20:13 UTC
Git commit 03b2346e4ec32fa11c3688d9d46616ab9b0448df by Simone Gaiarin.
Committed on 10/05/2021 at 05:36.
Pushed by gaiarin into branch 'master'.

Uncheck quick annotation when repopulating the quick tools menu

This prevents undefined states when the currently selected quick annotation is modified or deleted in the annotation settings.
FIXED-IN: 21.08

M  +6    -1    part/annotationactionhandler.cpp

https://invent.kde.org/graphics/okular/commit/03b2346e4ec32fa11c3688d9d46616ab9b0448df