Uncheck quick annotation when repopulating the quick tools menu

This prevents undefined states when the currently selected quick annotation is modified or deleted in the annotation settings.

BUG: 426026
FIXED-IN: 21.08